# copperfin-conduit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  start.sh
app/: app.py  auth.py  blueprint.py  settings.py
app/anthropic/: adapter.py  auth_state.py  openai_request_adapter.py  openai_response_adapter.py  request_adapter.py  response_adapter.py  settings.py  upstream.py
app/azure/: adapter.py  response_adapter.py
app/codex/: adapter.py  auth_state.py  request_adapter.py  response_adapter.py  settings.py
app/dashboard/: __init__.py  app.py  blueprint.py  telemetry.py
app/dashboard/static/: dashboard.css  dashboard.js
app/dashboard/templates/: dashboard.html
app/fusion/: __init__.py  adapter.py  invoker.py  settings.py
conduit/: __init__.py  anthropic_auth.py  auth.py  cli.py  envfile.py  paths.py  service.py  smoke.py
openspec/: AGENTS.md  project.md
openspec/artifacts/: dashboard-modernization-roadmap.md
scripts/: smoke_codex_proxy.py  start_proxy.py  start_windows_proxy.ps1
tests/: settings.py  test_anthropic_auth.py  test_anthropic_openai_request_adapter.py  test_anthropic_openai_response_adapter.py  test_anthropic_request_adapter.py  test_anthropic_routes.py  test_anthropic_settings.py  test_anthropic_upstream.py  test_codex_auth_state.py  test_codex_request_adapter.py  test_codex_response_adapter.py  test_codex_settings.py  test_conduit_auth.py  test_conduit_cli.py  test_dashboard_telemetry.py  test_fusion_adapter.py  test_fusion_invoker.py  test_fusion_settings.py  test_provider_model_dispatch.py  test_provider_routing.py
(+32 files in other folders)
