[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copperfin-conduit"
version = "0.1.0"
description = "Use your AI subscriptions like an API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Copperfin Software" },
]
dependencies = [
  "click>=7.0",
  "Flask==3.1.3",
  "rich==14.3.3",
  "requests==2.32.5",
  "gevent==25.9.1",
  "gunicorn>=19.9.0",
  "supervisor==4.3.0",
  "environs==14.6.0",
]

[project.scripts]
conduit = "conduit.cli:cli"

[tool.setuptools.packages.find]
include = ["app*", "conduit*"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "autoapp.py", "scripts/*"]

[tool.flake8]
ignore = ["D401", "D202", "E226", "E302", "E41", "W503", "E203"]
max-line-length = 120
max-complexity = 30

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
